--- a/.github/workflows/update-tracker-status.yml
+++ b/.github/workflows/update-tracker-status.yml
@@ -4,8 +4,9 @@ on:
   pull_request:
     types:
       - opened
+      - reopened
     branches:
-      - develop
+      - '*'
 
 jobs:
   update-status:
