--- a/.github/workflows/update-tracker-status.yml
+++ b/.github/workflows/update-tracker-status.yml
@@ -13,22 +13,20 @@ jobs:
     steps:
       - name: Log target branch
         run: |
-          echo "Target branch: ${{ github.event.pull_request.base.ref }}"
-          if [[ "${{ github.event.pull_request.base.ref }}" != "develop" ]]; then
-            echo "❌ Workflow не запущен, так как PR не в develop."
-            exit 1
-          fi
+          echo "📌 Target branch: ${{ github.event.pull_request.base.ref }}"
 
       - name: Extract issue key from PR title
         id: extract_issue_key
         run: |
-          echo "Pull request title: ${{ github.event.pull_request.title }}"
-          if [[ "${{ github.event.pull_request.title }}" =~ ^([A-Z]+-[0-9]+): ]]; then
+          echo "📌 Pull request title: ${{ github.event.pull_request.title }}"
+          
+          # Проверяем, что заголовок начинается с "REWIND-{число}", где число не начинается с 0
+          if [[ "${{ github.event.pull_request.title }}" =~ ^(REWIND-[1-9][0-9]*): ]]; then
             ISSUE_KEY="${BASH_REMATCH[1]}"
             echo "🔑 Найден ключ задачи: $ISSUE_KEY"
             echo "ISSUE_KEY=$ISSUE_KEY" >> $GITHUB_ENV
           else
-            echo "❌ No issue key found in PR title. Skipping..."
+            echo "❌ Ошибка: Заголовок PR должен начинаться с 'REWIND-{число}:' (где число не начинается с 0)"
             exit 1
           fi
 
