--- a/.github/workflows/update-task-status-on-in-review.yml
+++ b/.github/workflows/update-task-status-on-in-review.yml
@@ -1,4 +1,4 @@
-name: Update Task Status on In Review
+name: Update Task Status on inReview
 
 on:
   pull_request:
@@ -11,14 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository  # Обязательно загружаем репозиторий, чтобы экшны стали доступны
+        uses: actions/checkout@v4
+
       - name: Check PR Title Format
         id: check_pr_title
-        uses: ./.github/actions/check-pr-title  # Используем экшн для проверки названия PR
+        uses: ./.github/actions/check-pr-title  # Используем локальный экшн для проверки названия PR
         with:
           pr_title: ${{ github.event.pull_request.title }}
 
       - name: Update Task Status to "In Review"
-        uses: ./.github/actions/update-task-status  # Используем экшн для обновления статуса
+        uses: ./.github/actions/update-task-status  # Используем локальный экшн для обновления статуса
         with:
           issue_key: ${{ steps.check_pr_title.outputs.issue_key }}  # Передаём ключ задачи из предыдущего экшна
           transition_id: "inReview1"
