--- a/.github/workflows/update-task-status-on-merged.yml
+++ b/.github/workflows/update-task-status-on-merged.yml
@@ -10,6 +10,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Repository  # Обязательно загружаем репозиторий, чтобы экшны стали доступны
+        uses: actions/checkout@v4
+
       - name: Check if PR Was Merged
         run: |
           if [[ "${{ github.event.pull_request.merged }}" != "true" ]]; then
@@ -20,12 +23,12 @@ jobs:
 
       - name: Check PR Title Format
         id: check_pr_title
-        uses: ./.github/actions/check-pr-title  # Используем экшн для проверки названия PR
+        uses: ./.github/actions/check-pr-title  # Используем локальный экшн для проверки названия PR
         with:
           pr_title: ${{ github.event.pull_request.title }}
 
       - name: Update Task Status to "Merged"
-        uses: ./.github/actions/update-task-status  # Используем экшн для обновления статуса
+        uses: ./.github/actions/update-task-status  # Используем локальный экшн для обновления статуса
         with:
           issue_key: ${{ steps.check_pr_title.outputs.issue_key }}  # Передаём ключ задачи из предыдущего экшна
           transition_id: "merged"
