--- a/.github/workflows/update-task-status-on-merged.yml
+++ b/.github/workflows/update-task-status-on-merged.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Update Task Status to "Merged"
         uses: ./.github/actions/update-task-status  # Используем локальный экшн для обновления статуса
         with:
-          issue_key: ${{ steps.check_pr_title.outputs.issue_key }}  # Передаём ключ задачи из предыдущего экшна
+          issue_key: ${{ env.ISSUE_KEY }}  # Передаём ключ задачи из предыдущего экшна
           transition_id: "merged"
           yandex_token: ${{ secrets.YANDEX_TRACKER_TOKEN }}
           yandex_org_id: ${{ secrets.YANDEX_CLOUD_ORG_ID }}
