--- a/.github/actions/check-pr-title/action.yml
+++ b/.github/actions/check-pr-title/action.yml
@@ -14,6 +14,7 @@ runs:
   using: "composite"
   steps:
     - name: Validate PR Title Format
+      id: validate_title  # Устанавливаем id для шага, чтобы использовать его выходные данные
       shell: bash
       run: |
         echo "📌 Validating PR title: ${{ inputs.pr_title }}"
@@ -23,9 +24,8 @@ runs:
           ISSUE_KEY="${BASH_REMATCH[1]}"
           echo "🔑 Extracted ISSUE_KEY: $ISSUE_KEY"
           
-          # Правильная передача ISSUE_KEY
-          echo "issue_key=$ISSUE_KEY" >> $GITHUB_ENV  # Используем GITHUB_ENV для передачи значения
+          # Передаем значение ISSUE_KEY как output
+          echo "::set-output name=issue_key::$ISSUE_KEY"
         else
           echo "❌ Invalid PR title format. Expected 'REWIND-{number}: description'"
           exit 1
-        fi
