--- a/.github/workflows/update-task-status-on-in-review.yml
+++ b/.github/workflows/update-task-status-on-in-review.yml
@@ -11,23 +11,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository  # Обязательно загружаем репозиторий, чтобы экшны стали доступны
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
-      - name: Check PR Title Format
+      - name: Validate PR Title Format and Extract ISSUE_KEY
         id: check_pr_title
-        uses: ./.github/actions/check-pr-title  # Используем экшн для проверки названия PR
-        with:
-          pr_title: ${{ github.event.pull_request.title }}
+        shell: bash
+        run: |
+          echo "📌 Validating PR title: ${{ github.event.pull_request.title }}"
+
+          # Проверяем формат и извлекаем ключ задачи
+          if [[ "${{ github.event.pull_request.title }}" =~ ^(REWIND-[1-9][0-9]*): ]]; then
+            ISSUE_KEY="${BASH_REMATCH[1]}"
+            echo "🔑 Extracted ISSUE_KEY: $ISSUE_KEY"
+            
+            # Записываем ISSUE_KEY в файл окружения для использования в следующих шагах
+            echo "ISSUE_KEY=$ISSUE_KEY" >> $GITHUB_ENV
+          else
+            echo "❌ Invalid PR title format. Expected 'REWIND-{number}: description'"
+            exit 1
+          fi
 
       - name: Debug Issue Key
         run: |
-          echo "🔑 Extracted ISSUE_KEY: ${{ env.$ISSUE_KEY }}"  # Проверяем, что ISSUE_KEY передаётся
+          echo "🔑 Extracted ISSUE_KEY: ${{ env.ISSUE_KEY }}"  # Проверяем, что ISSUE_KEY передаётся
 
       - name: Update Task Status to "inReview"
-        uses: ./.github/actions/update-task-status  # Используем экшн для обновления статуса
-        with:
-          issue_key: ${{ env.ISSUE_KEY }}  # Используем ключ задачи из окружения
-          transition_id: "inReview1"
-          yandex_token: ${{ secrets.YANDEX_TRACKER_TOKEN }}
-          yandex_org_id: ${{ secrets.YANDEX_CLOUD_ORG_ID }}
+        shell: bash
+        run: |
+          if [ -z "${{ env.ISSUE_KEY }}" ]; then
+            echo "❌ Ошибка: ISSUE_KEY не найден!"
+            exit 1
+          fi
+
+          echo "ℹ️ Обновление задачи ${{ env.ISSUE_KEY }} до статуса 'inReview'..."
+
+          # Здесь делаем запрос к API Yandex Tracker для обновления статуса
+          RESPONSE=$(curl -s -o response.txt -w "%{http_code}" -X POST "https://api.tracker.yandex.net/v2/issues/${{ env.ISSUE_KEY }}/transitions/inReview1/_execute" \
+            -H "Authorization: OAuth ${{ secrets.YANDEX_TRACKER_TOKEN }}" \
+            -H "X-Cloud-Org-ID: ${{ secrets.YANDEX_CLOUD_ORG_ID }}")
+
+          if [ "$RESPONSE" -ne 200 ]; then
+            echo "❌ Ошибка при обновлении задачи. Код ответа: $RESPONSE"
+            cat response.txt
+            exit 1
+          else
+            echo "✅ Успешно обновлён статус задачи ${{ env.ISSUE_KEY }} до 'inReview'"
+          fi
